-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.16.0, Lustre 2.15.5
-
None
-
3
-
9223372036854775807
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/79949d91-729b-49a4-a720-86d32692512f
test_0b failed with the following error:
lfs mirror create: cannot create composite file '/mnt/lustre/d0b.sanity-flr/f0b.sanity-flr': Numerical result out of range sanity-flr test_0b: @@@@@@ FAIL: create mirrored file /mnt/lustre/d0b.sanity-flr/f0b.sanity-flr failed
Test session details:
clients: 2.15.63.161
servers: 2.14.0.21
<<Please provide additional information about the failure here>>
OSS dmesg shows
[44280.325037] Lustre: DEBUG MARKER: == sanity-flr test 0b: lfs mirror create plain layout mirrors ========================================================== 18:43:57 (1717181037) onyx-40vm6: Pool lustre.archive created CMD: onyx-40vm6 lctl get_param -n lod.lustre-MDT0000-mdtlov.pools.archive 2>/dev/null || echo foo CMD: onyx-40vm1.onyx.whamcloud.com lctl get_param -n lov.lustre-*.pools.archive 2>/dev/null || echo foo lfs mirror create: cannot create composite file '/mnt/lustre/d0b.sanity-flr/f0b.sanity-flr': Numerical result out of range sanity-flr test_0b: @@@@@@ FAIL: create mirrored file /mnt/lustre/d0b.sanity-flr/f0b.sanity-flr failed
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-flr test_0b - create mirrored file /mnt/lustre/d0b.sanity-flr/f0b.sanity-flr failed
- is related to
-
LU-16938 "lfs setstripe -C -1" stripes too widely, should be limited to OST_COUNT
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...