LU-17925 llapi: quiet -Wsign-conversion warnings

Builds with some compilers warn when using LLAPI_LAYOUT_WIDE_MIN
about sign conversion when subtracting a "negative" unsigned value:

    uint64_t stripe_count;

    warning: negative integer implicitly converted to unsigned type
    stripe_count = LLAPI_LAYOUT_WIDE;
                   ^~~~~~~~~~~~~~~~~

Change subtraction of a negative value to addition to avoid this.
Fix other similar issues in UAPI headers for sign conversion warnings.

The 'hur_len' return type was silently changed from ssize_t (signed)
to __kernel_size_t (unsigned) in commit v2_13_53-78-gb93ef29660,
but it is also too old to change it back.  It could never return an
error on a 64-bit architecture (max 2^32 * (32 + 1) ~= 2^37 bytes),
so disable impossible/unused negative error in this case.
On 32-bit systems (are any left?) return ~0UL = -1 in the caller.

Github: fixes #15

Test-Parameters: trivial testlist=sanity-hsm
Fixes: 73fd18caa6 ("LU-17925 utils: fix 'lfs setstripe -c -1' interop")
Fixes: b93ef29660 ("LU-13274 uapi: make lustre UAPI headers pass CONFIG_UAPI_HEADER_TEST")
Reported-by: Wei-keng Liao <wkliao@northwestern.edu>
Signed-off-by: Andreas Dilger <adilger@thelustrecollective.com>
Change-Id: I11fece9eb1de9c49013849172f35d9aca1500c1e
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63797
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: Timothy Day <timday@amazon.com>